name:                 movie-monad
version:              0.0.2.0
synopsis:             Plays videos using GStreamer and GTK+.
description:          Desktop video player that uses GStreamer and GTK+.
homepage:             https://github.com/lettier/movie-monad
license:              BSD3
license-file:         LICENSE
author:               Lettier
maintainer:           Lettier
copyright:            2017 David Lettier
category:               Application
                      , Multimedia
                      , Multimedia Player
                      , Video
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:     README.md
                      , LICENSE
                      , CHANGELOG.md
                      , ./src/dev/Paths_movie_monad.hs
                      , ./src/data/gui.glade
                      , ./src/data/movie-monad-logo.svg
                      , ./src/data/movie-monad-icon.png
                      , ./src/Records.hs
                      , ./src/Constants.hs
                      , ./src/Window.hs
                      , ./src/CommandLine.hs
                      , ./src/Keyboard.hs
                      , ./src/Mouse.hs
                      , ./src/FileChooser.hs
                      , ./src/Seek.hs
                      , ./src/PlayPause.hs
                      , ./src/VideoSizeSelector.hs
                      , ./src/Fullscreen.hs
                      , ./src/ErrorMessage.hs
                      , ./src/About.hs
                      , ./src/VideoInfo.hs
                      , ./src/Playbin.hs
                      , ./src/Uri.hs
                      , ./src/Utils.hs
                      , ./src/ScreensaverAndPowerManagement.hs
data-files:             data/gui.glade
                      , data/movie-monad-logo.svg
                      , data/movie-monad-icon.png
data-dir:             ./src/

source-repository     head
  type:               git
  location:           https://github.com/lettier/movie-monad.git

executable            movie-monad
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , filepath == 1.4.*
                      , system-fileio == 0.3.*
                      , system-filepath == 0.4.*
                      , text == 1.2.*
                      , time == 1.6.*
                      , process == 1.4.*
                      , MissingH == 1.4.*
                      , network-uri == 2.6.*
                      , haskell-gi-base == 0.20.4
                      , gi-gobject == 2.0.*
                      , gi-glib == 2.0.*
                      , gi-gdk == 3.0.*
                      , gi-gdkpixbuf == 2.0.*
                      , gi-gst == 1.0.*
                      , gi-gstvideo == 1.0.*
                      , gi-gtk == 3.0.18
  ghc-options:        -threaded -with-rtsopts=-N -Wall -freverse-errors
  other-modules:        Paths_movie_monad
                      , Records
                      , Constants
                      , Window
                      , CommandLine
                      , Keyboard
                      , Mouse
                      , FileChooser
                      , Seek
                      , PlayPause
                      , VideoSizeSelector
                      , Fullscreen
                      , ErrorMessage
                      , About
                      , VideoInfo
                      , Uri
                      , Playbin
                      , Utils
                      , ScreensaverAndPowerManagement
  hs-source-dirs:     ./src/
