name:                 movie-monad
version:              0.0.7.0
synopsis:             Plays videos using GStreamer and GTK+.
description:          A free and simple to use video player made with Haskell.
homepage:             https://github.com/lettier/movie-monad
license:              BSD3
license-file:         LICENSE
author:               Lettier
maintainer:           Lettier
copyright:            (C) 2017 David Lettier
category:               Application
                      , Multimedia
                      , Multimedia Player
                      , Video
build-type:           Simple
cabal-version:        >= 1.10
extra-source-files:     LICENSE
                      , CHANGELOG.md
                      , makefile
                      , stack.yaml
                      , ./src/dev/Paths_movie_monad.hs
                      , ./src/data/gui.glade
                      , ./src/data/style.css
                      , ./src/data/style-3-18.css
                      , ./src/data/style-3-20.css
                      , ./src/data/movie-monad-logo.svg
                      , ./src/data/movie-monad-icon.svg
                      , ./src/data/info-dialog-button-icon.svg
                      , ./src/data/play-icon.svg
                      , ./src/data/pause-icon.svg
                      , ./src/data/repeat-icon.svg
                      , ./src/data/full-screen-icon.svg
                      , ./src/Records.hs
                      , ./src/Constants.hs
                      , ./src/Capabilities.hs
                      , ./src/Reset.hs
                      , ./src/Window.hs
                      , ./src/CommandLine.hs
                      , ./src/Keyboard.hs
                      , ./src/Mouse.hs
                      , ./src/FileChooser.hs
                      , ./src/Seek.hs
                      , ./src/PlayPause.hs
                      , ./src/WindowWidthSelector.hs
                      , ./src/VideoSpeedSelector.hs
                      , ./src/SubtitleSelector.hs
                      , ./src/FullScreen.hs
                      , ./src/ErrorMessage.hs
                      , ./src/InfoDialog.hs
                      , ./src/VideoInfo.hs
                      , ./src/Playbin.hs
                      , ./src/Label.hs
                      , ./src/Uri.hs
                      , ./src/CssStyle.hs
                      , ./src/BottomControlsBoxVisibility.hs
                      , ./src/Utils.hs
                      , ./src/ScreensaverAndPowerManagement.hs
                      , ./src/c/gst-ffi.h
                      , ./src/c/gst-ffi.c
data-files:             data/gui.glade
                      , data/style.css
                      , data/style-3-18.css
                      , data/style-3-20.css
                      , data/movie-monad-logo.svg
                      , data/movie-monad-icon.svg
                      , data/info-dialog-button-icon.svg
                      , data/play-icon.svg
                      , data/pause-icon.svg
                      , data/repeat-icon.svg
                      , data/full-screen-icon.svg
data-dir:             ./src/

source-repository     head
  type:               git
  location:           https://github.com/lettier/movie-monad.git

executable            movie-monad
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:        base == 4.9.*
                      , filepath == 1.4.*
                      , system-fileio == 0.3.*
                      , system-filepath == 0.4.*
                      , text == 1.2.*
                      , time == 1.6.*
                      , process == 1.4.*
                      , MissingH == 1.4.*
                      , network-uri == 2.6.*
                      , bytestring == 0.10.*
                      , haskell-gi == 0.21.*
                      , haskell-gi-base == 0.21.*
                      , haskell-gi-overloading == 1.0
                      , gi-gobject == 2.0.*
                      , gi-glib == 2.0.*
                      , gi-gdk == 3.0.*
                      , gi-gdkpixbuf == 2.0.*
                      , gi-gst == 1.0.16
                      , gi-gstvideo == 1.0.16
                      , gi-gtk == 3.0.*
  other-modules:        Paths_movie_monad
                      , Records
                      , Constants
                      , Capabilities
                      , Reset
                      , Window
                      , CommandLine
                      , Keyboard
                      , Mouse
                      , FileChooser
                      , Seek
                      , PlayPause
                      , WindowWidthSelector
                      , VideoSpeedSelector
                      , SubtitleSelector
                      , FullScreen
                      , ErrorMessage
                      , InfoDialog
                      , VideoInfo
                      , Uri
                      , Playbin
                      , Label
                      , CssStyle
                      , BottomControlsBoxVisibility
                      , Utils
                      , ScreensaverAndPowerManagement
  hs-source-dirs:     ./src/
  includes:           ./src/c/gst-ffi.h
  c-sources:          ./src/c/gst-ffi.c
  ghc-options:        -rtsopts -with-rtsopts=-N -threaded -Wall -freverse-errors
